crates/toml/tests/snapshots/invalid/float/trailing-exp-point.stderr
TOML parse error at line 1, column 25
  |
1 | trailing-exp-point =  0.e
  |                         ^
invalid fraction, expected digits

---
TOML parse error at line 1, column 26
  |
1 | trailing-exp-point =  0.e
  |                          ^
invalid exponent, expected digits
